src/test/ui/feature-gate/feature-gate-cfg_doctest.rs
#[cfg(doctest)] //~ ERROR
pub struct SomeStruct;

fn main() {}
